Updated to Java 18